--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 
 /* Your CSS Code here. */
-.accio{
+.accio#job{
 	width:150px;
 	height:150px;
 	background-color:black;
 }
-.hello-accio{
+p.hello-accio{
+	display:invisible;
 	text-color:white;
 	margin-left:32px;
 	padding:10px
